# oyranos

./: .codedocs  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  AUTHORS.md  BUGS  CMakeLists.txt  COPYING  COPYING.md  ChangeLog  ChangeLog.md  ClassGenerator.cc  ClassGenerator.h  ClassInfo.cc  ClassInfo.h  ClassTemplates.cc  ClassTemplates.h  Doxyfile  Doxyfile.in  Doxyfile_alpha  Doxyfile_alpha.in  Doxyfile_intern  Maintaining  PACKAGING  PACKAGING.md  RAW.cc  RAW.hh  README  README.md  SANE_help.c  TODO  config  configure  configure.sh  configure_tests.sh  dirent_custom.h  doxygen.css  doxygen.footer  doxymentation  (+179 more)
cmake/: CMakeLists.txt  FindOyranos.cmake.in  FindX11.cmake  OyjlConfig.cmake.in  OyranosConfig.cmake.in
cmake/Modules/: FindCUPS.cmake  FindCairo.cmake  FindDL.cmake  FindELEKTRA.cmake  FindElektra.cmake  FindExif2.cmake  FindFltk.cmake  FindGetText.cmake  FindLCMS.cmake  FindLCMS2.cmake  FindLibPNG.cmake  FindLibRaw.cmake  FindLibXML2.cmake  FindSane.cmake  FindXRandR.cmake  FindXcm.cmake  FindXfixes.cmake  FindXinerama.cmake  FindXmu.cmake  FindXxf86vm.cmake  FindYajl.cmake
cmake/modules/: FindGetText.cmake  FindLibRaw.cmake
doc/: .gitignore  CMakeLists.txt  Doxyfile.files.alpha.in  Doxyfile.files.in  Doxyfile.in  Doxyfile_alpha.in  Doxyfile_intern  FAQ.md  SANE_help.html  doxygen.css  doxygen.footer  doxygen.footer.dox  doxygen.header  doxygen.header.dox  doxymentation  doxymentation.dox  doxymentation_alpha  doxymentation_common  doxymentation_common.dox  mkdoc.sh  oforms-example.xhtml  oyRE_help.html  oyStruct_s-compile-time-dependencies.dia  oyStruct_s-dependencies.dia
doc/man/: oyranos-config-fltk.1  oyranos-config.1  oyranos-config.3  oyranos-device.1  oyranos-monitor-daemon.1  oyranos-monitor-white-point.1  oyranos-monitor.1  oyranos-policy.1  oyranos-profile-graph.1  oyranos-profile-install.1  oyranos-profile.1  oyranos-profiles.1  oyranos.3  qcmsevents-qt4.1  qcmsevents.1
doc/md/: oyranos.md  oyranosconfig.md  oyranosconfigcs.md  oyranosconfigde.md  oyranosconfigfltk.md  oyranosconfigsynnefo.md  oyranosdevice.md  oyranosdevicecs.md  oyranosdevicede.md  oyranosmonitor.md  oyranosmonitorcs.md  oyranosmonitorde.md  oyranosmonitorwhitepoint.md  oyranosmonitorwhitepointcs.md  oyranosmonitorwhitepointde.md  oyranospolicy.md  oyranospolicycs.md  oyranospolicyde.md  oyranosprofile.md  oyranosprofilecs.md  oyranosprofilede.md  oyranosprofilegraph.md  oyranosprofilegraphcs.md  oyranosprofilegraphde.md  oyranosprofiles.md  oyranosprofilescs.md  oyranosprofilesde.md
docs/: CMakeLists.txt  Doxyfile.in  doxygen.footer.dox  doxygen.header.dox  doxymentation.dox
docs/man/: oyjl-args-qml.1  oyjl-args.1  oyjl-translate.1  oyjl.1  oyjl.3
docs/md/: oyjl.md  oyjlargs.md  oyjlargsde.md  oyjlargsqml.md  oyjlargsqmlde.md  oyjlde.md  oyjltranslate.md  oyjltranslatede.md
elektra-0.6.4/: INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  elektra.pc  elektra.spec  elektratools.pc
elektra-0.6.4/src/: Makefile.am  Makefile.in
extras/: CMakeLists.txt  OyranosConfig.cmake.in  f_compare.awk  f_compare.sh  modules.sh  oyranos-config.in  oyranos-monitor-setup.desktop  oyranos-night-manager  oyranos-night-manager.desktop  oyranos-profile-install  oyranos-profile-install.desktop  oyranos.pc.in  oyranos.spec.in
extras/codedocs/: Doxyfile
extras/debian/: changelog  control  copyright  liboyranos-dev.dirs  liboyranos-dev.install  liboyranos0.dirs  liboyranos0.install  oyranos-config-fltk.install  oyranos-doc.dirs  oyranos-doc.install  oyranos-qcmsevents.install  oyranos-ui-fltk.dirs  oyranos-ui-fltk.install  oyranos.dirs  oyranos.install  rules  shlibs.local  watch
extras/elektra/: PKGBUILD
extras/icc/: COPYING  Gray-CIE_L.h  ITULab.h  LStar-RGB.h  Lab.h  XYZ.h  sRGB.h
extras/spectra/: HLC_EPV_M0_V2-3.h
libxcm/: CMakeLists.txt
libxcm/src/: CMakeLists.txt  Xcm.c  XcmDDC.c  XcmDummy.c  XcmEdidParse.c  XcmEvents.c  XcmInternal.h
libxml2/: CMakeLists.txt
openicc/: .codedocs  .travis.yml  CMakeLists.txt  README.md  makefile.simple
openicc/cmake/: CMakeLists.txt  OpenIccConfig.cmake.in
openicc/docs/: CMakeLists.txt  COPYING.md  ChangeLog.md  Doxyfile.in  doxygen.footer.dox  doxygen.header.dox  doxymentation.dox
openicc/extras/: CMakeLists.txt  openicc.pc.in  openicc.spec.in
openicc/include/: CMakeLists.txt  openicc_config.h  openicc_core.h  openicc_version.h.in
openicc/libopenicc/: CMakeLists.txt  glob.c  glob.h  openicc_conf.h.in  openicc_config.c  openicc_config_internal.h  openicc_core.c  openicc_db.c  openicc_io.c  openicc_string.c  oyjl_core.c  oyjl_tree.c  oyjl_tree.h  oyjl_tree_internal.h  xdg_bds.c
openicc/oyjl/: .gitlab-ci.yml  CMakeLists.txt  README.md  makefile  oyjl-args-share.c  oyjl-args.c  oyjl-args.completion  oyjl-translate.completion  oyjl.1  oyjl.c  oyjl.completion  oyjl.h  oyjl_args.c  oyjl_args.h  oyjl_args_base.h  oyjl_args_cli.c  oyjl_args_tree.c  oyjl_args_web.c  oyjl_core.c  oyjl_debug.c  oyjl_debug.h  oyjl_git_version.h  oyjl_i18n.c  oyjl_i18n.h  oyjl_i18n_internal.h  oyjl_init.c  oyjl_internal.h.in  oyjl_io.c  oyjl_io.h  oyjl_io_internal.h  oyjl_io_share.c  oyjl_macros.h  oyjl_macros_compile.h  oyjl_message.c  oyjl_render.c  oyjl_string.c  oyjl_string.h  oyjl_test.h  oyjl_test_main.h  oyjl_translate.c  (+14 more)
openicc/po/: OpenICC.pot  cs.po  de.po  eo.po  eu.po  fr.po  ru.po
openicc/src/: CMakeLists.txt
oyjl-args-qml/: CMakeLists.txt  app.qrc  lib.cpp  main.cpp  main2.cpp  mini-app.c  mini-app.pro  test.c
oyjl-args-qml/include/: app_data.h  app_manager.h  process.h  utils.h
oyjl-args-qml/qml/: About.qml  AppWindow.qml  Combo.qml  LInput.qml  LSlider.qml  LSwitch.qml  OptionsList.qml  SplitView.qml  linkify.js  main.qml  marked.js  process.js
oyjl-args-qml/src/: app_data.cpp  utils.cpp
oyjl-args-qml/translations/: app_de.ts
settings/: CMakeLists.txt  designer.policy.xml  office.policy.xml  office.policy2.xml  photographer.policy.xml  prepress.policy.xml
src/: CMakeLists.txt
src/examples/: README  (+14 more)
yajl/: CMakeLists.txt  makefile.in  yajl_buf.h  yajl_encode.h  yajl_gen.c  yajl_lex.h
(+1957 files in other folders)
